[package]
name = "frame-metadata"
version = "14.2.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://axlib.dev"
repository = "https://github.com/axia-tech/frame-metadata/"
description = "Metadata types for Axlib runtimes"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", default-features = false, features = ["derive"] }
cfg-if = "1.0.0"
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, optional = true, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[features]
default = ["std", "v14"]
v8  = []
v9  = []
v10 = []
v11 = []
v12 = []
v13 = []
legacy = ["v13", "v12", "v11", "v10", "v9", "v8"]
v14 = ["scale-info", "serde"]
std = [
	"codec/std",
	"scale-info/std",
	"scale-info/serde",
	"scale-info/decode",
	"serde",
]
